whitespace fix

--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -20,7 +20,7 @@ h1 {
   }
 
   .header {
-    height: 600px;
+    height: 500px;
     background-image: url('/src/Images/snowfont_53.png');
     background-size: 100%;
     background-position: center;
